--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(140,106,82,255);
+  padding-bottom: 5000px ;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
 
 code {
