--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -62,6 +62,10 @@
   cursor: pointer;
 }
 
+.search-button:hover {
+  background-color: #493715;
+}
+
 .right-section {
   display: flex;
   height: 100px;
@@ -71,6 +75,23 @@
 
 .cart-logo-container {
   padding-right: 13px;
+  position: relative;
+}
+
+.cart-logo-container p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 15px;
+  position: absolute;
+  width: 22px;
+  height: 22px;
+  border: 1px solid white;
+  border-radius: 20px;
+  top: -4px;
+  right: 5px;
+  background-color: rgb(51, 119, 51);
 }
 
 .cart-logo {
