--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -42,6 +42,7 @@
   align-items: center;
   border-radius: 20px 0px 0px 20px;
   border-width: 1px;
+  font-family: 'Courier New', Courier, monospace;
   outline: none;
   font-size: 17px;
 }
@@ -55,6 +56,7 @@
   height: 39.5px;
   margin-left: -5px;
   border: none;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 15px;
   color: white;
   border-radius: 0px 20px 20px 0;
@@ -88,6 +90,7 @@
   color: white;
   font-size: 15px;
   position: absolute;
+  font-family: 'Courier New', Courier, monospace;
   width: 22px;
   height: 22px;
   border: 1px solid white;
@@ -107,11 +110,13 @@
 
 .cart-price span {
   font-size: 18px;
+  font-family: 'Courier New', Courier, monospace;
   font-weight: 700;
 }
 
 .navi-bar {
   display: flex;
+  font-family: 'Courier New', Courier, monospace;
   position: fixed;
   justify-content: space-between;
   top: 75px;
