--- a/frontend/src/components/product_component/Product_component.css
+++ b/frontend/src/components/product_component/Product_component.css
@@ -26,6 +26,22 @@
     gap: 6px;
   }
 
+  .product_component_box_info_buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .product_component_box_info_buttons quantity-controls {
+    max-width: 105px;
+    max-height: 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   .product_component_box_info_name_price {
     margin: 10px;
     display: flex;
@@ -49,16 +65,17 @@
   
   .product_component_box button {
     background-color: rgba(140,106,82,255);
+    color: white;
+    font-size: large;
     border: none;
     border-radius: 50%;
     padding: 10px;
     cursor: pointer;
-    margin: 21px;
+    margin: 5px;
+    margin-top: 20px;
     width: 40px;
     height: 40px;
-    display: flex;
-    align-content: center;
-    justify-content: center;
+    
   }
 
   .product_component_box_info_all button:hover {
