--- a/frontend/src/components/Main/main.css
+++ b/frontend/src/components/Main/main.css
@@ -1,6 +1,11 @@
+.main-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+
 .container {
   display: flex;
-  height: 400px;
   justify-content: center;
   align-items: center;
 }
@@ -12,14 +17,63 @@
   column-gap: 20px;
 }
 
+.popular-main {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+  row-gap: 0px;
+  column-gap: 0px;
+}
+
+
+
+
+@media (max-width: 900px) {
+  .main {
+    grid-template-columns: 1fr 1fr;
+  }
+  
+}
+
+@media (min-width: 901px) and (max-width: 1399px) {
+  .main{
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
+
+  }
+}
+
+@media (min-width: 1400px) {
+  .main {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+   
+  }
+}
+
+
 .product {
   display: grid;
   justify-content: center;
   align-items: center;
-  width: 26vh;
-  height: 26vh;
+  width: 180px;
+  height: 180px;
   background-color: white;
   border-radius: 13px;
+}
+
+.popular-product {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  width: 230px;
+  height: 300px;
+  border: 3px red solid;
+  background-color: white;
+}
+
+
+.info-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .product P {
@@ -36,10 +90,10 @@
 
 
 .info-bar { 
-  display: flex;
-  justify-content: space-between;
-  padding-right: 170px;
-  padding-left: 170px;
+  display: block;
+  width: 100%;
+  height: 45px;
+  justify-content: start;
   align-items: center;
   margin-top: 200px;
 }
@@ -48,19 +102,16 @@
   font-family: 'Courier New', Courier, monospace;
   font-size: 30px;
   color: white;
+  width: 100%;
+  height: 45px;
   font-weight: 500;
-}
 
-.info-bar button {
-  font-family: 'Courier New', Courier, monospace;
-  border: none;
-  background-color: transparent;
-  font-size: 15px;
-  cursor: pointer;
 }
 
 .product-picture {
   width: 150px;
 }
 
-
+.popular-product-picture {
+  width: 200px;
+}
