--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -14,6 +14,15 @@
   z-index: 1;
 }
 
+.huj {
+  position: flex;
+  height: 500px;
+  width: 200px;
+  top: 0;
+  bottom: 0;
+  background-color: black;
+}
+
 .left-section {
   justify-content: center;
   align-items: center;
