--- a/frontend/src/components/Main/main.css
+++ b/frontend/src/components/Main/main.css
@@ -17,12 +17,7 @@
   column-gap: 20px;
 }
 
-.popular-main {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
-  row-gap: 0px;
-  column-gap: 0px;
-}
+
 
 
 
@@ -31,20 +26,29 @@
   .main {
     grid-template-columns: 1fr 1fr;
   }
-  
+  .info-p {
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media (min-width: 901px) and (max-width: 1399px) {
   .main{
     grid-template-columns: 1fr 1fr 1fr 1fr ;
-
+  }
+  .info-p {
+    justify-content: center;
+    align-items: center;
   }
 }
 
 @media (min-width: 1400px) {
   .main {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-   
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; 
+  }
+  .info-p {
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -53,8 +57,8 @@
   display: grid;
   justify-content: center;
   align-items: center;
-  width: 180px;
-  height: 180px;
+  width: 190px;
+  height: 190px;
   background-color: white;
   border-radius: 13px;
 }
@@ -98,14 +102,13 @@
   margin-top: 200px;
 }
 
-.info-bar p{
+.info-p {
   font-family: 'Courier New', Courier, monospace;
   font-size: 30px;
   color: white;
   width: 100%;
   height: 45px;
   font-weight: 500;
-
 }
 
 .product-picture {
