--- a/frontend/src/components/product_component/Product_component.css
+++ b/frontend/src/components/product_component/Product_component.css
@@ -1,29 +1,31 @@
   .product_component_box {
-    max-width: 312px;
-    max-height: 407px;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    height: 350px;
+    background: white;
+  }
+
+  .image-container {
     display: flex;
-    flex-direction: column;
-    border-radius: 11px;
-    border: 2px solid var(--gray-scale-gray-100, #d1caca);
-    background: rgb(246, 242, 242);
-    margin-top: 300px;
-    margin-left: 300px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 230px;
   }
   
   .product_component_box > a {
     width: max-content;
     height: max-content;
-    padding: 5px;
-    gap: 10px;
+   
   }
   
   .product_component_box_info_all {
     display: flex;
-    padding: 10px;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
-    gap: 6px;
+   
+    height: 120px;
   }
 
   .product_component_box_info_buttons {
@@ -34,19 +36,19 @@
   }
 
   .product_component_box_info_buttons quantity-controls {
-    max-width: 105px;
-    max-height: 40px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    width: 170px;
   }
 
   .product_component_box_info_name_price {
-    margin: 10px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
   }
 
   .product_component_box_info_name_price a {
@@ -54,15 +56,22 @@
   }
 
   .product_component_box_info_name_price > a > h2 {
-    color: var(--gray-scale-gray-700, #4D4D4D);
-    margin: 2px;
+    color: rgb(65, 64, 64);
+    font-size: 20px;
+    margin: 0;
+    padding-bottom: 10px;
   }
   
   .product_component_box_info_name_price > h3 {
-    gap: 2px;
-    margin: 2px;
+    margin: 0;
+    font-size: 20px;
+    color: black;
   }
   
+  .Product-Image {
+    width: 210px;
+  }
+
   .product_component_box button {
     background-color: rgba(140,106,82,255);
     color: white;
@@ -75,9 +84,37 @@
     margin-top: 20px;
     width: 40px;
     height: 40px;
-    
+   
   }
 
   .product_component_box_info_all button:hover {
     background-color: #493715;
+  }
+
+  .products {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+    row-gap: 3px;
+    column-gap: 3px;
+  }
+
+  @media (max-width: 900px) {
+    .products{
+      grid-template-columns: 1fr 1fr;
+    }
+    
+  }
+  
+  @media (min-width: 901px) and (max-width: 1399px) {
+    .products{
+      grid-template-columns: 1fr 1fr 1fr  ;
+  
+    }
+  }
+  
+  @media (min-width: 1400px) {
+    .products{
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+     
+    }
   }
