--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -153,6 +153,15 @@
   margin-right: 4rem;
 }
 
+.n-list a {
+  text-decoration: none;
+  color: grey;
+}
+
+.n-list a:hover {
+  color: white;
+}
+
 .n-list>ul>li:hover { 
   cursor: pointer;
   color: white;
