--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -117,7 +117,7 @@
   display: block;
 }
 
-.cart-price span {
+.cart-price {
   font-size: 18px;
   font-family: 'Courier New', Courier, monospace;
   font-weight: 700;
@@ -162,7 +162,7 @@
   color: white;
 }
 
-.n-list>ul>li:hover { 
+.n-list>ul>li:hover {
   cursor: pointer;
   color: white;
 }
